<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="#305030"
    tools:context=".Button_2">

    <Button
        android:id="@+id/button_fever"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#d6d6ad"
        android:text="@string/fever"
        android:layout_marginBottom="20dp"/>

    <Button
    android:id="@+id/button_gastric"
    android:layout_marginTop="90dp"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:text="@string/gastric" />

    <Button
        android:id="@+id/button_diarrhoea"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="150dp"
        android:text="@string/diarrhoea" />

    <Button
        android:id="@+id/button_Diabetes"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="210dp"
        android:text="@string/diabetes" />



</RelativeLayout>
