<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashBoard"
    android:background="#ae888d"
    android:gravity="center_horizontal">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:background="@drawable/maxresdefault"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:src="@mipmap/home" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:background="#ff0022"
                        android:text="Welcome to our Dashboard"
                        android:textSize="25dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="215dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="135dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <android.support.v7.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="5dp"
                                android:layout_marginRight="5dp">

                                <ImageView
                                    android:id="@+id/button_image"
                                    android:layout_width="80dp"
                                    android:layout_height="80dp"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:src="@drawable/search" />

                                <Button
                                    android:id="@+id/button1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/button_image"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:background="@android:color/transparent"
                                    android:text="@string/search" />

                            </RelativeLayout>
                        </android.support.v7.widget.CardView>

                        <android.support.v7.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="1">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:id="@+id/button_image2"
                                    android:layout_width="80dp"
                                    android:layout_height="80dp"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:src="@drawable/stethoscope" />

                                <Button
                                    android:id="@+id/button2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/button_image2"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:background="@android:color/transparent"
                                    android:text="@string/drug_by_indication" />

                            </RelativeLayout>
                        </android.support.v7.widget.CardView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="135dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <android.support.v7.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="5dp"
                                android:layout_marginRight="5dp">

                                <ImageView
                                    android:id="@+id/button_image3"
                                    android:layout_width="80dp"
                                    android:layout_height="80dp"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:src="@drawable/visitingcrd" />

                                <Button
                                    android:id="@+id/button3"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/button_image3"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:background="@android:color/transparent"
                                    android:text="@string/visiting_card" />

                            </RelativeLayout>
                        </android.support.v7.widget.CardView>

                        <android.support.v7.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="1">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:id="@+id/button_image4"
                                    android:layout_width="80dp"
                                    android:layout_height="80dp"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:src="@drawable/notepad" />

                                <Button
                                    android:id="@+id/button4"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/button_image4"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:background="@android:color/transparent"
                                    android:text="@string/medical_news" />

                            </RelativeLayout>
                        </android.support.v7.widget.CardView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="135dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <android.support.v7.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="5dp"
                                android:layout_marginRight="5dp">

                                <ImageView
                                    android:id="@+id/button_image5"
                                    android:layout_width="80dp"
                                    android:layout_height="80dp"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:src="@drawable/dna" />

                                <Button
                                    android:id="@+id/button5"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/button_image5"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:background="@android:color/transparent"
                                    android:text="@string/drug_by_class" />

                            </RelativeLayout>
                        </android.support.v7.widget.CardView>

                        <android.support.v7.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="1">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:id="@+id/button_image6"
                                    android:layout_width="80dp"
                                    android:layout_height="80dp"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:src="@drawable/drug2" />

                                <Button
                                    android:id="@+id/button6"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/button_image6"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:background="@android:color/transparent"
                                    android:text="@string/drug_by_generic" />

                            </RelativeLayout>
                        </android.support.v7.widget.CardView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="135dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <android.support.v7.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="5dp"
                                android:layout_marginRight="5dp">

                                <ImageView
                                    android:id="@+id/button_image7"
                                    android:layout_width="80dp"
                                    android:layout_height="80dp"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:src="@drawable/drug1" />

                                <Button
                                    android:id="@+id/button7"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/button_image7"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:background="@android:color/transparent"
                                    android:text="@string/add_drug" />

                            </RelativeLayout>
                        </android.support.v7.widget.CardView>

                        <android.support.v7.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="1">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:id="@+id/button_image8"
                                    android:layout_width="80dp"
                                    android:layout_height="80dp"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:src="@drawable/job" />

                                <Button
                                    android:id="@+id/button8"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/button_image8"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:background="@android:color/transparent"
                                    android:text="@string/job" />

                            </RelativeLayout>
                        </android.support.v7.widget.CardView>

                    </LinearLayout>
                </LinearLayout>

             </RelativeLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>